Fix: Navbar spacing

--- a/stepfn-dev/src/App.css
+++ b/stepfn-dev/src/App.css
@@ -1,12 +1,16 @@
 .CodeMirror {
-    height: 100%;
+  height: 100%;
 }
 
 .editor {
-    height: 60vh;
+  height: 60vh;
 }
 
 .bottom .editor {
-    height: 15vh;
+  height: 15vh;
 }
 
+.topnav-link {
+  padding-right: 0.3rem !important;
+  padding-left: 0.3rem !important;
+}
